--- a/index.html
+++ b/index.html
@@ -459,34 +459,8 @@
         <section class="section" id="information-we-collect">
             <div class="glass-card">
                 <h2>Information We Collect</h2>
-
-                <h3>Locally Stored Financial Data</h3>
-                <p>You provide the following data directly within the App. It is stored exclusively on your device:</p>
-                <ul>
-                    <li>Account names and balances</li>
-                    <li>Transaction amounts, types (income/expense), dates, and notes</li>
-                    <li>Category assignments and currency selections</li>
-                </ul>
-
-                <h3>App Preferences</h3>
-                <p>The App stores your preferences locally on your device:</p>
-                <ul>
-                    <li>Theme and language settings</li>
-                    <li>Default currency and default account</li>
-                    <li>Premium subscription status</li>
-                </ul>
-
-                <div class="not-collected">
-                    <div class="not-label">Not Collected</div>
-                    <ul>
-                        <li>Personal identity information (name, email, phone number, address)</li>
-                        <li>Device identifiers (IDFA, IDFV, device fingerprinting)</li>
-                        <li>Location data</li>
-                        <li>Analytics or behavioral data</li>
-                        <li>Photos, contacts, health data, or biometrics</li>
-                        <li>Cookies or tracking technologies</li>
-                    </ul>
-                </div>
+                <p>All financial data you enter (accounts, transactions) and your app preferences are stored exclusively on your device. Nothing is transmitted to any server.</p>
+                <p>Penny does <strong>not</strong> collect personal identity information, device identifiers, location data, analytics, biometrics, or cookies.</p>
             </div>
         </section>
 
@@ -530,6 +504,7 @@
                 <h2>Data Export</h2>
                 <p>Penny allows you to export your financial data in JSON or CSV format through Settings.</p>
                 <p>The export is processed entirely on your device and presented via the standard iOS share sheet. You choose where to save or share the exported file.</p>
+                <p>Exported files are handled by the destination you choose (e.g., Files, email, third-party apps). Their privacy practices apply.</p>
                 <p>We have no access to your exported files.</p>
             </div>
         </section>
