--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Penny - Privacy Policy</title>
     <style>
         :root {
-            --primary: #FF9500;
-            --bg: #FFFFFF;
-            --bg-secondary: #F2F2F7;
-            --card-bg: rgba(242, 242, 247, 0.72);
+            --primary: #EF6233;
+            --bg: #FAFAF8;
+            --bg-secondary: #F3F2EF;
+            --card-bg: rgba(255, 254, 251, 0.72);
             --card-border: rgba(60, 60, 67, 0.08);
             --text-primary: #000000;
             --text-secondary: rgba(60, 60, 67, 0.6);
             --text-tertiary: rgba(60, 60, 67, 0.3);
             --separator: rgba(60, 60, 67, 0.12);
-            --toc-bg: rgba(242, 242, 247, 0.8);
-            --toc-hover: rgba(255, 149, 0, 0.08);
-            --toc-active: rgba(255, 149, 0, 0.14);
+            --toc-bg: rgba(243, 242, 239, 0.8);
+            --toc-hover: rgba(239, 98, 51, 0.08);
+            --toc-active: rgba(239, 98, 51, 0.14);
         }
 
 
